tests/baselines/reference/typeofOperatorWithBooleanType.errors.txt
typeofOperatorWithBooleanType.ts(17,30): error TS2454: Variable 'BOOLEAN' is used before being assigned.
typeofOperatorWithBooleanType.ts(30,37): error TS2454: Variable 'BOOLEAN' is used before being assigned.
typeofOperatorWithBooleanType.ts(34,8): error TS2454: Variable 'BOOLEAN' is used before being assigned.
typeofOperatorWithBooleanType.ts(36,1): error TS2695: Left side of comma operator is unused and has no side effects.
typeofOperatorWithBooleanType.ts(44,11): error TS2454: Variable 'BOOLEAN' is used before being assigned.


==== typeofOperatorWithBooleanType.ts (5 errors) ====
    // typeof  operator on boolean type
    var BOOLEAN: boolean;
    
    function foo(): boolean { return true; }
    
    class A {
        public a: boolean;
        static foo() { return false; }
    }
    module M {
        export var n: boolean;
    }
    
    var objA = new A();
    
    // boolean type var
    var ResultIsString1 = typeof BOOLEAN;
                                 ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
    
    // boolean type literal
    var ResultIsString2 = typeof true;
    var ResultIsString3 = typeof { x: true, y: false };
    
    // boolean type expressions
    var ResultIsString4 = typeof objA.a;
    var ResultIsString5 = typeof M.n;
    var ResultIsString6 = typeof foo();
    var ResultIsString7 = typeof A.foo();
    
    // multiple typeof  operator
    var ResultIsString8 = typeof typeof BOOLEAN;
                                        ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
    
    // miss assignment operators
    typeof true;
    typeof BOOLEAN;
           ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
    typeof foo();
    typeof true, false;
    ~~~~~~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    typeof objA.a;
    typeof M.n;
    
    // use typeof in type query
    var z: boolean;
    var x: boolean[];
    var r: () => boolean;
    z: typeof BOOLEAN;
              ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
    r: typeof foo;
    var y = { a: true, b: false};
    z: typeof y.a;
    z: typeof objA.a;
    z: typeof A.foo;
    z: typeof M.n;